FIx #37005: Mask tool + "Area" Brush Mapping + "Anchored" Stroke = crash

Was caused by area normal calvultion using undo nodes to get coords
from and undo nodes does not contain coords whe using mask tool.